# factotum-server

./: .travis.yml  CHANGELOG  Cargo.toml  Makefile  README.md  Vagrantfile
.github/workflows/: cd.yml
.travis/: build.sh  release.yml
src/: main.rs  tests.rs
src/factotum_server/: mod.rs  tests.rs
src/factotum_server/command/: mod.rs  tests.rs
src/factotum_server/dispatcher/: mod.rs  tests.rs
src/factotum_server/persistence/: mod.rs  tests.rs
src/factotum_server/responder/: mod.rs  tests.rs
src/factotum_server/server/: mod.rs  tests.rs
