[package]
name = "factotum-server"
version = "0.3.0"
authors = ["Nicholas Ung <support@snowplowanalytics.com>", "Josh Beemster <support@snowplowanalytics.com>"]

[dependencies]
log = "0.3"
log4rs = "0.6"
docopt = "0.7"
getopts = "0.2"
chrono = { version = "0.4.5", features = ["serde"] }
lazy_static = "0.2"
regex = "0.2"
url = "1.4"
rust-crypto = "^0.2"
threadpool = "1.3"
iron = "0.6"
router = "0.6"
bodyparser = "0.8"
persistent = "0.4"
logger = "0.4"
rustc-serialize = "0.3"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
consul = {git = "https://github.com/stusmall/consul-rust.git"}
base64 = "0.4"
